# Mplify

./: .gitignore  LICENSE  README.md  dev-mplify-compose.yml  mplify-compose.yml  mplify-env  salt_linjeforening.sql
client/: Dockerfile  README.md  build.sh  package-lock.json  package.json
client/etc/: Caddyfile
client/public/: index.html
client/src/: App.js  index.css
client/src/Api/: AdminApi.js  UserApi.js  apiRequest.js
client/src/Components/: AddProject.js  ProjectItem.js  Projects.js  TodoItem.js  Todos.js
client/src/Components/AdminPage/: AdminPage.js  BulkActivate.js  EditUser.js  (+3 more)
client/src/Models/: StudyProgramme.js  UserData.js
database/: 1schema.sql  2devdata.sql  scheme.sql
mail/: auth
server/: Dockerfile  build.sh  requirements.txt
server/src/: app.py  auth.py  db.py  members.py
v2/: README.md  conftest.py  database.py  format.sh  main.py  pyproject.toml  run.sh
v2/api/user/: login.py  register.py  user.py
v2/api/v1/admin/: api.py  endpoints.py  register.py
v2/api/v1/token/: token.py
v2/api/v1/user/: endpoints.py  login.py  register.py  token.py  user.py
v2/api/v1/utils/: admin.py  base.py  user.py
v2/core/: database.py  settings.py
v2/models/: admin.py  login.py  register.py  token.py  user.py
v2/tests/api/: test_login.py  test_register.py  test_user.py
v2/tests/api/v1/admin/: test_admin_api.py  test_admin_login.py  test_admin_register.py
v2/tests/api/v1/user/: test_login.py  test_register.py  test_user.py  test_user_login.py  test_user_register.py
v2/tests/utils/: user.py
v2/utils/: hash.py  oauth.py
(+18 files in other folders)
